[package]
name = "rust_gui_todo_list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable egui persistence via eframe egui framework: https://docs.rs/eframe/latest/eframe/trait.App.html#method.save
# Only saves the window size and other window properties upon closing/opening
# Note that it stores the app state within some data dir i.e. AppData or .local/share/
[dependencies]
#eframe = { version = "0.27.2", features = ["persistence"] }
eframe = "0.27.2"
egui = "0.27.2"
egui-toast = "0.13.0"
egui_file = "0.17"
image = "0.25.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


